# Alien-LLM

./: .dockerignore  .gitattributes  ARCHITECTURE_PLAN.md  CMakeLists.txt  Dockerfile  alien_inference.py  analysis.md  build_cpp.sh  communication_log.txt  download_datasets.py  interface.html  interface.py  main.py  render.yaml  requirements.txt  run.txt  vercel.json  vocab.txt
data/: educational_dataset.txt
frontend/: documentation.html  home.html  index.html
include/: ata.hpp  dataloader.hpp  embeddings.hpp  ensemble.hpp  orchestrator.hpp  rfa.hpp  ssm.hpp  ssog.hpp  stre.hpp  tokenizer.hpp  trainer.hpp  uq.hpp  utils.hpp
scratch/: test_checkpoint.cpp
src/: bridge.cpp  main.cpp
